# Security-Operation-Agent-v2

./: README.md
Client-UI/: index.html  package-lock.json  package.json
Client-UI/src/: App.tsx
Security-Operations-Agent/: .gitignore  attachmentStore.py  chat_history.json  chatkit_server.py  llmAgent.py  main.py  memory_store.py  prompt.py  pyproject.toml  tools.py  utils.py  vectorstore.py
